# spaa

./: .gitignore  CLAUDE.md  README.md  SPEC.md
.github/workflows/: release.yml
chrome_to_spaa/: Cargo.toml
chrome_to_spaa/src/: lib.rs  main.rs
dtrace_to_spaa/: Cargo.toml
dtrace_to_spaa/src/: lib.rs  main.rs
perf_to_spaa/: Cargo.toml
perf_to_spaa/src/: lib.rs
site/: package.json  pnpm-lock.yaml
site/app/: globals.css  layout.tsx  page.tsx
site/app/spec/: page.tsx
site/app/usage/: page.tsx
site/components/: ascii-art.tsx  code-block.tsx  markdown-renderer.tsx  navigation.tsx
skills/: SKILL.md
spaa/: Cargo.toml  HEAPDIFF.md  README.md
spaa/src/: chrome.rs  dtrace.rs  heapdiff.rs  lib.rs  perf.rs  turbopack.rs
spaa_parse/: Cargo.toml  README.md
spaa_parse/src/: lib.rs
