[package]
name = "dtrace_to_spaa"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dtrace_to_spaa"
path = "src/main.rs"

[dependencies]
spaa_parse = { path = "../spaa_parse" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
