[package]
name = "spaa"
version = "0.1.0"
edition = "2024"
description = "Tools for converting profiling data to SPAA format"

[lib]
path = "src/lib.rs"

[[bin]]
name = "dtrace_to_spaa"
path = "src/bin/dtrace_to_spaa.rs"

[[bin]]
name = "chrome_to_spaa"
path = "src/bin/chrome_to_spaa.rs"

[dependencies]
spaa_parse = { version = "0.1.0", path = "../spaa_parse" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
