[package]
name = "spaa_parse"
version = "0.1.0"
edition = "2024"
description = "Parser and writer for SPAA (Stack Profile for Agentic Analysis) files"
license = "MIT"
repository = "https://github.com/yourusername/spaa"
readme = "README.md"
keywords = ["profiling", "perf", "dtrace", "flamegraph", "performance"]
categories = ["development-tools::profiling", "parser-implementations"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
